Fix z-index bug on long project descriptions

--- a/src/app/styles/components/project/_project-header.scss
+++ b/src/app/styles/components/project/_project-header.scss
@@ -33,6 +33,7 @@
   width: 100%;
   @include gray-text;
   position: relative;
+  z-index: 1;
 
   .project-header__description-summary {
     display: inline-block;
